--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
-    background: #111;
-    text-align: center;
-    padding: 10px;
-    margin-top: 30px;
-  }
-  
+  background: #111;
+  text-align: center;
+  padding: 10px;
+  margin-top: 30px;
+  color: white;
+}
